# skinner_box

./: .bumpversion.cfg  .env  .gitignore  MANIFEST.in  README.md  build_nuitka.sh  check-version.py  env.development  env.production  installer.sh  main.py  requirements.txt  run.py  run.sh  setup.cfg  setup.py  skinnerBox.py  skinnerBox.py.old
.github/workflows/: build.yml  enforce-version.yml  google-cloudrun-docker.yml  major_release.yaml  minor_release.yaml  patch_release.yaml  release.yaml
app/: __init__.py  config.json  config.py  database.py  flask_app.py  gpio.py  routes.py  trial_config.json  trial_state_machine.py
skinnerbox/: __init__.py  main.py  trial_config.json  update_checker.py  utils.py
skinnerbox/app/: __init__.py  app_config.py  routes.py  trial_logger.py  trial_state_machine.py  trial_state_machine_v2.py  typeDefs.py
skinnerbox/static/css/: dark.css
skinnerbox/static/js/: LogPage.js  TrialPage.js  TrialSettingsUpdater.js  trialSettings.js
skinnerbox/static/js/v2/: trialPage.js
skinnerbox/templates/: Base.html  HomePage.html  LogPage.html  SummaryPage.html  TestingPage.html  TrialPage.html  TrialSettings.html  base.html  homepage.html  trialpage.html  trialsettingspage.html
static/css/: main.css
static/js/: home.js  trialSettings.js
templates/: base.html  homepage.html  logpage.html  runningtrialpage.html  testingpage.html  trialsettingspage.html
