[metadata]
name = skinnerbox
version = 0.1.0
author = Jacob Dykman
description = SkinnerBox device control and experiment logic
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MidwestUniLabs/skinner_box
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    blinker
    cffi
    click
    colorama
    colorzero
    cryptography
    DateTime
    Deprecated
    dotenv
    Flask
    Flask-Limiter
    gpiozero
    Jinja2
    limits
    markdown-it-py
    MarkupSafe
    mdurl
    openpyxl
    ordered-set
    packaging
    pycparser
    Pygments
    python-dotenv
    pytz
    requests
    rich
    typing_extensions
    Werkzeug
    wrapt
    zope.interface
    zstandard

[options.entry_points]
console_scripts =
    skinnerbox = skinnerbox.main:main
